--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <button class="btn btn--primary btn--block">Buy now</button>
-    <a href="#" class="btn btn--accent btn--block">Buy now</a>
+    <input
+      type="text"
+      class="input"
+      placeholder="Enter the domain name here..."
+    />
   </body>
 </html>
