--- a/index.html
+++ b/index.html
@@ -14,13 +14,11 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <div class="input-group">
-      <input
-        type="text"
-        class="input"
-        placeholder="Enter the domain name here..."
-      />
-      <button class="btn btn--accent">Search</button>
+    <div class="card card--secondary">
+      <header class="card__header">Card title</header>
+      <div class="card__body">
+        Lorem ipsum dolor sit, adipisicing elit. Deleniti velit aliquid.
+      </div>
     </div>
   </body>
 </html>
