--- a/index.html
+++ b/index.html
@@ -14,19 +14,24 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <div class="media">
-      <div class="media__image">
-        <svg class="icon icon--primary">
-          <use xlink:href="images/sprite.svg#snap"></use>
-        </svg>
-      </div>
-      <div class="media__body">
-        <h3 class="media__title">Easy Start & Managed Updates</h3>
-        <p>
-          Our cloud plans include easy onboarding for new and existing sites and
-          managed WordPress and WooCommerce auto-updates.
-        </p>
-      </div>
-    </div>
+    <blockquote class="quote">
+      <p class="quote__text">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi, aliquid
+        iure deleniti ad dolores nemo.
+      </p>
+      <footer class="quote__footer">
+        <div class="media">
+          <div class="media__image quote__icon">
+            <svg class="icon icon--primary">
+              <use xlink:href="images/sprite.svg#line"></use>
+            </svg>
+          </div>
+          <div class="media__body">
+            <h3 class="media__title quote__author">John Smith</h3>
+            <p class="quote__organization">ABC Company</p>
+          </div>
+        </div>
+      </footer>
+    </blockquote>
   </body>
 </html>
