--- a/index.html
+++ b/index.html
@@ -13,36 +13,17 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body>
-    <div class="card testimonial">
+  <body style="padding: 3rem">
+    <div class="callout callout--primary">
       <div class="grid grid--1x2">
-        <div class="testimonial__image">
-          <img src="images/testimonial.jpg" alt="A happy, smiling customer" />
-          <span class="icon-container icon-container--accent">
-            <svg class="icon icon--small icon--white">
-              <use xlink:href="images/sprite.svg#quotes"></use>
-            </svg>
-          </span>
-        </div>
-        <blockquote class="quote">
-          <p class="quote__text">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi,
-            aliquid iure deleniti ad dolores nemo.
+        <div class="callout__content">
+          <h2 class="callout__heading">Ready to Get Started?</h2>
+          <p>
+            Choose the hosting provider that helps you start easy, build fast
+            and grow strong! It's risk-free with our 14-day money back
           </p>
-          <footer class="quote__footer">
-            <div class="media">
-              <div class="media__image quote__icon">
-                <svg class="icon icon--primary">
-                  <use xlink:href="images/sprite.svg#line"></use>
-                </svg>
-              </div>
-              <div class="media__body">
-                <h3 class="media__title quote__author">John Smith</h3>
-                <p class="quote__organization">ABC Company</p>
-              </div>
-            </div>
-          </footer>
-        </blockquote>
+        </div>
+        <a class="btn btn--stretched btn--secondary" href="#">Get Started</a>
       </div>
     </div>
   </body>
