--- a/index.html
+++ b/index.html
@@ -13,18 +13,19 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body style="padding: 3rem">
-    <div class="callout callout--primary">
-      <div class="grid grid--1x2">
-        <div class="callout__content">
-          <h2 class="callout__heading">Ready to Get Started?</h2>
-          <p>
-            Choose the hosting provider that helps you start easy, build fast
-            and grow strong! It's risk-free with our 14-day money back
-          </p>
-        </div>
-        <a class="btn btn--stretched btn--secondary" href="#">Get Started</a>
+  <body>
+    <div class="collapsible collapsible--expanded">
+      <header class="collapsible__header">
+        <h2 class="collapsible__heading">Item 1</h2>
+        <svg class="icon icon--white collapsible--chevron">
+          <use xlink:href="images/sprite.svg#chevron"></use>
+        </svg>
+      </header>
+      <div class="collapsible__content">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique,
+        dolore!
       </div>
     </div>
+    <script src="js/main.js"></script>
   </body>
 </html>
