--- a/index.html
+++ b/index.html
@@ -14,18 +14,31 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <div class="collapsible collapsible--expanded">
-      <header class="collapsible__header">
-        <h2 class="collapsible__heading">Item 1</h2>
-        <svg class="icon icon--white collapsible--chevron">
-          <use xlink:href="images/sprite.svg#chevron"></use>
-        </svg>
+    <section class="block container">
+      <header class="block__header">
+        <h2 class="block__heading">Heading</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore,
+          sequi.
+        </p>
       </header>
-      <div class="collapsible__content">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique,
-        dolore!
+      <div style="width: 30%; padding: 2rem">
+        <div class="card card--secondary">
+          <header class="card__header">Card title</header>
+          <div class="card__body">
+            Lorem ipsum dolor sit, adipisicing elit. Deleniti velit aliquid.
+          </div>
+        </div>
       </div>
-    </div>
-    <script src="js/main.js"></script>
+    </section>
+    <section class="block block--dark block--skewed-left">
+      <div class="container">
+        <h2 class="block__heading">Heading</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore,
+          sequi.
+        </p>
+      </div>
+    </section>
   </body>
 </html>
