--- a/index.html
+++ b/index.html
@@ -14,78 +14,52 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <section class="block block--dark block--skewed-right showcase">
-      <h2 class="block__heading showcase__heading">
-        User-Friendy Control Panel
-      </h2>
-      <article class="container grid grid--1x2 showcase__content">
-        <picture class="showcase__image">
-          <source
-            type="image/webp"
-            srcset="images/ipad.webp 1x, images/ipad@2x.webp 2x" />
-          <source
-            type="image/png"
-            srcset="images/ipad.png 1x, images/ipad@2x.png 2x" />
-          <img src="images/ipad.png" alt=""
-        /></picture>
-        <ul class="list showcase__media">
-          <li>
-            <div class="media">
-              <div class="media__image">
-                <svg class="icon icon--primary">
-                  <use xlink:href="images/sprite.svg#snap"></use>
+    <section class="block">
+      <header class="block__header">
+        <h2 class="block__heading">What our Customers are Saying</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
+          sapiente saepe aliquam assumenda maxime quo?
+        </p>
+      </header>
+      <div class="container">
+        <div class="card testimonial">
+          <div class="grid grid--1x2">
+            <div class="testimonial__image">
+              <img
+                src="images/testimonial.jpg"
+                alt="A happy, smiling customer"
+              />
+              <span class="icon-container icon-container--accent">
+                <svg class="icon icon--small icon--white">
+                  <use xlink:href="images/sprite.svg#quotes"></use>
                 </svg>
-              </div>
-              <div class="media__body">
-                <h3 class="media__title block__heading">
-                  Easy Start & Managed Updates
-                </h3>
-                <p class="media__content">
-                  Our cloud plans include easy onboarding for new and existing
-                  sites and managed WordPress and WooCommerce auto-updates.
-                </p>
-              </div>
+              </span>
             </div>
-          </li>
-          <li>
-            <div class="media">
-              <div class="media__image">
-                <svg class="icon icon--primary">
-                  <use xlink:href="images/sprite.svg#growth"></use>
-                </svg>
-              </div>
-              <div class="media__body">
-                <h3 class="media__title block__heading">
-                  Staging, Git & WP-CLI
-                </h3>
-                <p class="media__content">
-                  We make your WordPress and WooCommerce development flow easier
-                  with a convenient staging tool and Git and WP-CLI integration.
-                </p>
-              </div>
-            </div>
-          </li>
-          <li>
-            <div class="media">
-              <div class="media__image">
-                <svg class="icon icon--primary">
-                  <use xlink:href="images/sprite.svg#wordpress"></use>
-                </svg>
-              </div>
-              <div class="media__body">
-                <h3 class="media__title block__heading">
-                  Dynamic Caching & More
-                </h3>
-                <p class="media__content">
-                  Speed up your WordPress and Woo sites with our SG Optimizer
-                  plugin through smart dynamic coaching and multiple other
-                  performance optimizations.
-                </p>
-              </div>
-            </div>
-          </li>
-        </ul>
-      </article>
+            <blockquote class="quote">
+              <p class="quote__text">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil
+                aspernatur accusamus et culpa rem quaerat fugiat dolorem
+                necessitatibus. Aut odio maxime, minus animi sunt eligendi! Est
+                quam et fuga adipisci?
+              </p>
+              <footer class="quote__footer">
+                <div class="media">
+                  <div class="media__image quote__icon">
+                    <svg class="icon icon--primary">
+                      <use xlink:href="images/sprite.svg#line"></use>
+                    </svg>
+                  </div>
+                  <div class="media__body">
+                    <h3 class="media__title quote__author">John Smith</h3>
+                    <p class="quote__organization">ABC Company</p>
+                  </div>
+                </div>
+              </footer>
+            </blockquote>
+          </div>
+        </div>
+      </div>
     </section>
     <script src="js/main.js"></script>
   </body>
