--- a/index.html
+++ b/index.html
@@ -4,7 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Moshify</title>
+    <meta
+      name="description"
+      content="Deploy your websites in less than 60 seconds."
+    />
+    <meta property="og:title" content="Moshify..." />
+    <meta
+      property="og:description"
+      content="Deploy your websites in less than 60 seconds."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="http://" />
+    <meta property="og:url" content="http://moshified.com" />
+    <title>Moshify - Go Online for Just $9</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
@@ -12,9 +24,10 @@
     />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
-    <header>
+    <div>
       <nav class="nav collapsible">
         <a class="nav__brand" href="/"
           ><img src="images/logo.svg" alt="Moshify Logo"
@@ -29,16 +42,18 @@
           <li class="nav__item"><a href="#">Pricing</a></li>
         </ul>
       </nav>
-    </header>
+    </div>
     <section class="block block--dark block--skewed-left hero">
       <div class="container grid grid--1x2">
-        <header class="block__header hero__content">
-          <h1 class="block__heading">Cloud Hosting for Pros</h1>
+        <div class="block__header hero__content">
+          <h1 class="block__heading" data-aos="fade-right">
+            Cloud Hosting for Pros
+          </h1>
           <p class="hero__tagline">
             Deploy your websites in less than 60 seconds.
           </p>
           <a href="#" class="btn btn--accent btn--stretched">Get Started </a>
-        </header>
+        </div>
         <picture>
           <source
             type="image/webp"
@@ -46,17 +61,21 @@
           <source
             type="image/png"
             srcset="images/banner.png 1x, images/banner@2x.png 2x" />
-          <img class="hero__image" src="images/banner.png" alt=""
+          <img
+            class="hero__image"
+            src="images/banner.png"
+            data-aos="zoom-in"
+            alt=""
         /></picture>
       </div>
     </section>
-    <section class="block container block-domain">
-      <header class="block__header">
+    <section class="block container block-domain" data-aos="fade-up">
+      <div class="block__header">
         <h2>Starting at 9$ per month</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos, quia!
         </p>
-      </header>
+      </div>
       <div class="input-group">
         <input
           type="text"
@@ -79,17 +98,17 @@
         <li>.xyz $10</li>
       </ul>
     </section>
-    <section class="block container block-plans">
+    <section class="block container block-plans" data-aos="fade-up">
       <div class="grid grid--1x3">
         <div class="plan">
           <div class="card card--secondary">
-            <header class="card__header">
+            <div class="card__header">
               <h3 class="plan__name">Entry</h3>
               <span class="plan__price">$14</span>
               <span class="plan__billing-cycle">/month</span>
               <span class="badge badge--secondary badge--small">10% OFF</span>
               <span class="plan__description">Easy start on the cloud</span>
-            </header>
+            </div>
             <div class="card__body">
               <ul class="list list--tick">
                 <li class="list__item">Unlimited Websites</li>
@@ -103,13 +122,13 @@
         </div>
         <div class="plan plan--popular">
           <div class="card card--primary">
-            <header class="card__header">
+            <div class="card__header">
               <h3 class="plan__name">Entry</h3>
               <span class="plan__price">$14</span>
               <span class="plan__billing-cycle">/month</span>
               <span class="badge badge--primary badge--small">10% OFF</span>
               <span class="plan__description">Easy start on the cloud</span>
-            </header>
+            </div>
             <div class="card__body">
               <ul class="list list--tick">
                 <li class="list__item">Unlimited Websites</li>
@@ -123,13 +142,13 @@
         </div>
         <div class="plan">
           <div class="card card--secondary">
-            <header class="card__header">
+            <div class="card__header">
               <h3 class="plan__name">Entry</h3>
               <span class="plan__price">$14</span>
               <span class="plan__billing-cycle">/month</span>
               <span class="badge badge--secondary badge--small">10% OFF</span>
               <span class="plan__description">Easy start on the cloud</span>
-            </header>
+            </div>
             <div class="card__body">
               <ul class="list list--tick">
                 <li class="list__item">Unlimited Websites</li>
@@ -144,15 +163,15 @@
       </div>
     </section>
     <section class="container block">
-      <header class="block__header">
+      <div class="block__header">
         <h2 class="block__heading">Host on the Cloud to Keep Growing</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla,
           corporis.
         </p>
-      </header>
+      </div>
       <article class="grid grid--1x2 feature">
-        <div class="feature__content">
+        <div class="feature__content" data-aos="zoom-out-right">
           <span class="icon-container">
             <svg class="icon icon--primary">
               <use xlink:href="images/sprite.svg#easy"></use>
@@ -166,7 +185,7 @@
           </p>
           <a href="#" class="link-arrow">Learn More</a>
         </div>
-        <picture>
+        <picture data-aos="zoom-out-left">
           <source
             type="image/webp"
             srcset="images/easy.webp 1x, images/easy@2x.webp 2x" />
@@ -228,11 +247,11 @@
       </article>
     </section>
     <section class="block block--dark block--skewed-right showcase">
-      <header class="block__header">
+      <div class="block__header">
         <h2>User-Friendy Control Panel</h2>
-      </header>
+      </div>
       <article class="container grid grid--1x2 showcase__content">
-        <picture class="showcase__image">
+        <picture class="showcase__image" data-aos="fade-right">
           <source
             type="image/webp"
             srcset="images/ipad.webp 1x, images/ipad@2x.webp 2x" />
@@ -241,7 +260,7 @@
             srcset="images/ipad.png 1x, images/ipad@2x.png 2x" />
           <img src="images/ipad.png" alt=""
         /></picture>
-        <ul class="list showcase__media">
+        <ul class="list showcase__media" data-aos="fade-up">
           <li>
             <div class="media">
               <div class="media__image">
@@ -300,14 +319,14 @@
         </ul>
       </article>
     </section>
-    <section class="block">
-      <header class="block__header">
+    <section class="block" data-aos="zoom-in">
+      <div class="block__header">
         <h2 class="block__heading">What our Customers are Saying</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla
           sapiente saepe aliquam assumenda maxime quo?
         </p>
-      </header>
+      </div>
       <div class="container">
         <div class="card testimonial">
           <div class="grid grid--1x2">
@@ -362,12 +381,12 @@
     <footer class="block block--dark footer">
       <div class="container grid footer__sections">
         <section class="collapsible collapsible--expanded footer__section">
-          <header class="collapsible__header">
+          <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">Products</h2>
             <svg class="icon icon--white collapsible--chevron">
               <use xlink:href="images/sprite.svg#chevron"></use>
             </svg>
-          </header>
+          </div>
           <div class="collapsible__content">
             <ul class="list">
               <li><a href="#">WordPress Hosting</a></li>
@@ -379,12 +398,12 @@
           </div>
         </section>
         <section class="collapsible footer__section">
-          <header class="collapsible__header">
+          <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">Company</h2>
             <svg class="icon icon--white collapsible--chevron">
               <use xlink:href="images/sprite.svg#chevron"></use>
             </svg>
-          </header>
+          </div>
           <div class="collapsible__content">
             <ul class="list">
               <li><a href="#">About</a></li>
@@ -398,12 +417,12 @@
           </div>
         </section>
         <section class="collapsible footer__section">
-          <header class="collapsible__header">
+          <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">Support</h2>
             <svg class="icon icon--white collapsible--chevron">
               <use xlink:href="images/sprite.svg#chevron"></use>
             </svg>
-          </header>
+          </div>
           <div class="collapsible__content">
             <ul class="list">
               <li><a href="#">Contact</a></li>
@@ -416,12 +435,12 @@
           </div>
         </section>
         <section class="collapsible footer__section">
-          <header class="collapsible__header">
+          <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">Domains</h2>
             <svg class="icon icon--white collapsible--chevron">
               <use xlink:href="images/sprite.svg#chevron"></use>
             </svg>
-          </header>
+          </div>
           <div class="collapsible__content">
             <ul class="list">
               <li><a href="#">Domain Checker</a></li>
@@ -432,13 +451,16 @@
             </ul>
           </div>
         </section>
-        <section class="footer__brand">
+        <div class="footer__brand">
           <img src="images/logo.svg" alt="" />
           <p class="footer__copyright">Copyright 2020 Mosh</p>
-        </section>
+        </div>
       </div>
     </footer>
-
     <script src="js/main.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
