--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           ><img src="images/logo.svg" alt="Moshify Logo"
         /></a>
         <svg class="icon icon--white nav__toggler">
-          <use xlink:href="images/sprite.svg#menu"></use>
+          <use href="images/sprite.svg#menu"></use>
         </svg>
         <ul class="list nav__list collapsible__content">
           <li class="nav__item"><a href="#">Hosting</a></li>
@@ -84,7 +84,7 @@
         />
         <button class="btn btn--accent">
           <svg class="icon icon--white">
-            <use xlink:href="images/sprite.svg#search"></use>
+            <use href="images/sprite.svg#search"></use>
           </svg>
           Search
         </button>
@@ -174,7 +174,7 @@
         <div class="feature__content" data-aos="zoom-out-right">
           <span class="icon-container">
             <svg class="icon icon--primary">
-              <use xlink:href="images/sprite.svg#easy"></use>
+              <use href="images/sprite.svg#easy"></use>
             </svg>
           </span>
           <h3 class="feature__ heading">Super Easy to Use</h3>
@@ -199,7 +199,7 @@
         <div class="feature__content">
           <span class="icon-container">
             <svg class="icon icon--primary">
-              <use xlink:href="images/sprite.svg#computer"></use>
+              <use href="images/sprite.svg#computer"></use>
             </svg>
           </span>
           <h3 class="feature__ heading">Simply Fast Websites</h3>
@@ -224,7 +224,7 @@
         <div class="feature__content">
           <span class="icon-container">
             <svg class="icon icon--primary">
-              <use xlink:href="images/sprite.svg#wordpress"></use>
+              <use href="images/sprite.svg#wordpress"></use>
             </svg>
           </span>
           <h3 class="feature__ heading">WordPress Made Easy</h3>
@@ -265,7 +265,7 @@
             <div class="media">
               <div class="media__image">
                 <svg class="icon icon--primary">
-                  <use xlink:href="images/sprite.svg#snap"></use>
+                  <use href="images/sprite.svg#snap"></use>
                 </svg>
               </div>
               <div class="media__body">
@@ -283,7 +283,7 @@
             <div class="media">
               <div class="media__image">
                 <svg class="icon icon--primary">
-                  <use xlink:href="images/sprite.svg#growth"></use>
+                  <use href="images/sprite.svg#growth"></use>
                 </svg>
               </div>
               <div class="media__body">
@@ -301,7 +301,7 @@
             <div class="media">
               <div class="media__image">
                 <svg class="icon icon--primary">
-                  <use xlink:href="images/sprite.svg#wordpress"></use>
+                  <use href="images/sprite.svg#wordpress"></use>
                 </svg>
               </div>
               <div class="media__body">
@@ -337,7 +337,7 @@
               />
               <span class="icon-container icon-container--accent">
                 <svg class="icon icon--small icon--white">
-                  <use xlink:href="images/sprite.svg#quotes"></use>
+                  <use href="images/sprite.svg#quotes"></use>
                 </svg>
               </span>
             </div>
@@ -352,7 +352,7 @@
                 <div class="media">
                   <div class="media__image quote__icon">
                     <svg class="icon icon--primary">
-                      <use xlink:href="images/sprite.svg#line"></use>
+                      <use href="images/sprite.svg#line"></use>
                     </svg>
                   </div>
                   <div class="media__body">
@@ -384,7 +384,7 @@
           <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">Products</h2>
             <svg class="icon icon--white collapsible--chevron">
-              <use xlink:href="images/sprite.svg#chevron"></use>
+              <use href="images/sprite.svg#chevron"></use>
             </svg>
           </div>
           <div class="collapsible__content">
@@ -401,7 +401,7 @@
           <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">Company</h2>
             <svg class="icon icon--white collapsible--chevron">
-              <use xlink:href="images/sprite.svg#chevron"></use>
+              <use href="images/sprite.svg#chevron"></use>
             </svg>
           </div>
           <div class="collapsible__content">
@@ -420,7 +420,7 @@
           <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">Support</h2>
             <svg class="icon icon--white collapsible--chevron">
-              <use xlink:href="images/sprite.svg#chevron"></use>
+              <use href="images/sprite.svg#chevron"></use>
             </svg>
           </div>
           <div class="collapsible__content">
@@ -438,7 +438,7 @@
           <div class="collapsible__header">
             <h2 class="collapsible__heading footer__heading">Domains</h2>
             <svg class="icon icon--white collapsible--chevron">
-              <use xlink:href="images/sprite.svg#chevron"></use>
+              <use href="images/sprite.svg#chevron"></use>
             </svg>
           </div>
           <div class="collapsible__content">
