--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
       <div class="container grid grid--1x2">
         <div class="block__header hero__content">
           <h1 class="block__heading" data-aos="fade-right">
-            Cloud Hosting for Prosss
+            Cloud Hosting for Pros
           </h1>
           <p class="hero__tagline">
-            Deploy your websites in less than 30 seconds.
+            Deploy your websites in less than 60 seconds.
           </p>
           <a href="#" class="btn btn--accent btn--stretched">Get Started </a>
         </div>
